Clean up and refactors
