# server/services/eventService.js
@@ -20,8 +20,9 @@ export default class EventService extends BaseService {
    * @returns {Array} returns an array of events
    */
   async findRecommendedEvents(interests) {
-    return this.find({
-      tags: { $in: interests },
+    console.log(interests, '>>>>>>Hmm');
+    return this.findAll({
+      category: { $in: interests },
     });
   }
 }
